--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         height: 100vh;
         width: 100%;
         background: linear-gradient(#01012e, #240019);
+        overflow: hidden;
       }
       .conter {
         width: 100%;
         height: 100vh;
-        background: url("../img/stars1.png") 100%;
+        background: url("./stars1.png") 100%;
         display: flex;
         justify-content: center;
         align-items: center;
